[package]
name = "termtrack"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
crossterm = {version = "=0.28.1"}
device_query = "2.1.0"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rodio = "0.19.0"
serde = "1.0.210"
serde_json = "1.0.128"
sha3 = "0.10.8"
hex = "0.4"
